<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">记账宝</string>
    <string name="tab_today">今日</string>
    <string name="tab_details">明细</string>
    <string name="tab_Statistics">统计</string>
    <string name="tab_setting">设置</string>
    <string name="today_consume">今日明细</string>
    <string name="add_type_hint">添加类型</string>
    <string name="add_type_title">添加消费类型</string>
    <string name="add_type_toast">请输入消费类型</string>
    <string name="comsume_desc">写几句消费描述吧，不要超过50个字</string>
    <string name="question_msg">写几句问题描述吧，不要超过200个字</string>
    <string name="submit">提交</string>
    <string name="save">保存</string>
    <string name="back">返回</string>
    <string name="image_desc">记账</string>
    <string name="more">查看更多…</string>
    <string name="menu_add">添加</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_delete">删除</string>
    <string name="menu_cancel">取消</string>
    <string name="menu_selectall">全选</string>
    <string name="menu_anti_election">反选</string>
    <string name="bill_total">总计(元):</string>
    <string name="new_msg_notify">基本设置</string>
    <string name="set_billfeetype">选择类型</string>
    <string name="set_billtype">收支类型</string>
    <string name="set_billprice">收支金额</string>
    <string name="set_billdate">收支时间</string>
    <string name="set_voice">是否加载声音</string>
    <string name="set_pwd">密码保护</string>
    <string name="set_checkup">检查更新</string>
    <string name="new_msg_notify2">关于应用</string>
    <string name="set_aboutus">关于应用</string>
    <string name="set_qustion">意见反馈</string>
    <string name="nickName">您的昵称</string>
    <string name="contactType">联系方式</string>
    <string name="beginbill">进 入 系 统</string>
    <string name="addbill">记 一 笔</string>
    <string name="set_gusturepwd">设置手势密码</string>
    <string name="set_gusturepwd_again">设置新的手势密码</string>
    <string name="input_gusturepwd">输入手势密码</string>
    <string name="set_gusturepic">绘制解锁图案</string>
    <string name="forget_gusturepwd">忘记手势密码？</string>
    <string name="open_gusturepwd">手势密码开启</string>
    <string name="set_gusturepwd">手势密码设置</string>
    <string name="ans_gusturepic">密码保护答案</string>
    <string name="ans_gusturepwd">请输入密码保护答案</string>
    <string name="ans_gusturepwd_explain">密保答案,是您找回密码的凭证</string>
    <string name="ans_gusturepwd_errmsg">密保答案与设置不一致，无法让您找回</string>
    <string name="menu_date">账目/日期</string>
    <string name="menu_project">账目</string>
    <string name="menu_price">金额</string>
    <string name="menu_note">备注</string>
    <string name="income">收入</string>
    <string name="consume">支出</string>
    <string name="balance">结余</string>
    <string name="msgbalance">%d年-结余</string>
    <!-- Accessibility description sent when user starts drawing a lock pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <!-- Accessibility description sent when the pattern times out and is cleared. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <!-- Accessibility description sent when user adds a cell to the pattern. [CHAR LIMIT=NONE]  -->
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <!-- Accessibility description sent when user completes drawing a pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <!-- 菜单设置项 -->
    <string name="action_about">关于</string>
    <string name="action_exit">退出</string>
    <string name="imageDescript">null</string>
    <string name="no_record">无记录</string>
    <!-- 下拉刷新 -->
    <string name="pull_to_refresh_update">最近更新：</string>
	<!-- 菜单 -->
    <string name="action_search">搜索</string>
    <string name="action_new">记一笔</string>
    <string name="action_settings">设置</string>
    <string name="action_exit">退出</string>
</resources>
