<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>
  <RadioGroup android:gravity="center_vertical"  android:layout_gravity="bottom" android:orientation="horizontal" android:background="@drawable/bottom_tab" android:padding="0dip" android:id="@+id/main_radio" android:layout_width="fill_parent" android:layout_height="wrap_content">  
            <RadioButton android:id="@+id/radio_button0"  android:text="@string/tab_today" android:checked="true"    style="@style/main_tab_bottom" />  
            <RadioButton android:id="@+id/radio_button1"  android:text="@string/tab_details"  style="@style/main_tab_bottom" />  
            <RadioButton android:id="@+id/radio_button2"  android:text="@string/tab_Statistics"  style="@style/main_tab_bottom" />  
            <RadioButton android:id="@+id/radio_button3"  android:text="@string/tab_setting"  style="@style/main_tab_bottom" />  
        </RadioGroup>
</LinearLayout>