<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white" 
    >
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical"  android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <TextView style="@style/list_billtype_text"  android:text="@string/ans_gusturepwd" />
        <EditText android:id="@id/pwd_answer" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginTop="@dimen/space_12"  android:hint="@string/ans_gusturepwd_explain"  android:inputType="text"></EditText>
    </LinearLayout>
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <Button android:id="@id/submit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/submit" android:layout_weight="1.0" />
        <Button android:id="@id/back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:text="@string/back" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
