<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:alpha="http://schemas.android.com/apk/res-auto" >

<!--     <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        alpha:showAsAction="ifRoom"
        android:showAsAction="always"
        android:title="@string/action_search"/> -->
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        alpha:showAsAction="ifRoom"
        android:showAsAction="always"
        android:title="@string/action_new"/>
    <item
        android:id="@+id/action_settings"
      
        android:orderInCategory="100"
        alpha:showAsAction="never"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_exit"
      
        android:orderInCategory="100"
        alpha:showAsAction="never"
        android:showAsAction="never"
        android:title="@string/action_exit"/>

</menu>